# Docker-with-Poetry

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  startup.py
docker_with_poetry/: __init__.py
