[tool.poetry]
name = "docker-with-poetry"
version = "0.1.0"
description = ""
authors = ["Muhammad-Adeel-DS <muhammad.adeel@gohorrizonai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
watchfiles = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
